infrastructure/deploiement-kube/environments/prod/patch-backend-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
