infrastructure/deploiement-kube/environments/prod/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 800m
            memory: 1024Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: front
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 800m
            memory: 1024Mi
